<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/math_main"
    android:columnCount="2"
    android:orientation="horizontal"
    android:padding="30dp"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:paddingLeft="10dp"
        android:text="@string/choose_math_subject"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/addition_view"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:clickable="true"
            android:onClick="openMathExercisePage"
            android:src="@drawable/math_plus_icon128" />

        <ImageView
            android:id="@+id/subtraction_view"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:clickable="true"
            android:onClick="openMathExercisePage"
            android:src="@drawable/math_minus_icon128" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/multiplication_view"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_column="0"
            android:clickable="true"
            android:onClick="openMathExercisePage"
            android:src="@drawable/math_x_icon128" />

        <ImageView
            android:id="@+id/division_view"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_column="1"
            android:clickable="true"
            android:onClick="openMathExercisePage"
            android:src="@drawable/math_divide_icon128" />
    </LinearLayout>


    <!--levels-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:padding="10dp"
        android:text="@string/choose_level"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:background="#ff1cec1d"
            android:checked="true"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/easy"
            android:textStyle="bold|italic" />


        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:background="#ffffff72"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/medium"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:background="#ffff113e"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/hard"
            android:textStyle="bold|italic" />

    </RadioGroup>


</GridLayout>